tests/errors/compiler/must_be_digit_after_exp/letter_after_exp.c
int main()
{
	float a;
	a = 12ef45;
	return 0;
}